Fix add CSS to make footer fixed preventing unwanted jumping behaviour

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,15 +111,19 @@ p {
 
 #leaf-image {
     width: 100%;
-    height: 200px;
+    height: 150px;
     object-fit: contain;
 }
 
 /* Social Networks*/
 
-footer {
+.footer {
     text-align: center;
     padding-top: 15px;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
 }
 
 .social-networks {
@@ -137,4 +141,12 @@ footer {
     margin: 5px;
     padding: 2%;
     color: grey;
+}
+
+/* Media query for screens above 991px */
+@media (min-width: 992px) {
+
+    #leaf-image {
+        margin-top: 25%;
+    }
 }
